--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script>
-    var url = new URL(window.location.href);
-    url.host = "fluss.apache.org";
-    window.location.href = url.href;
-  </script>
+  <meta http-equiv="refresh" content="0; url=https://fluss.apache.org/">
 </head>
 </html>
